--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
         </header>
 
         <form class="form" method="post" novalidate>
+          <button class="toggle" type="button" id="installment-toggle">
+            Рассрочка
+          </button>
           <label class="field">
             <span>Стоимость недвижимости</span>
             <input
@@ -74,7 +77,7 @@
             />
           </label>
 
-          <label class="field">
+          <label class="field" id="rate-field">
             <span>Процентная ставка</span>
             <input
               name="annual_rate"
